<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.transfer_order.TransferOrderFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/order_transfer_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/primary_light"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/submit_your_contacts"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:startIconDrawable="@drawable/ic_account_box">

                <AutoCompleteTextView
                    android:id="@+id/name_autoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:hint="@string/your_name"
                    android:inputType="text"
                    android:textColor="@color/primary"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:startIconDrawable="@drawable/ic_phone">

                <AutoCompleteTextView
                    android:id="@+id/telephone_autoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:hint="@string/submit_your_phone"
                    android:inputType="phone"
                    android:textColor="@color/primary"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:startIconDrawable="@drawable/ic_email">

                <AutoCompleteTextView
                    android:id="@+id/email_autoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:hint="@string/submit_your_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/primary"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:startIconDrawable="@drawable/ic_contact_mail">

                <AutoCompleteTextView
                    android:id="@+id/types_contact_autoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/your_type_of_contact"
                    android:cursorVisible="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    android:textColor="@color/primary"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/order_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:elevation="8dp"
                android:backgroundTint="@color/accent"
                android:layout_gravity="center"
                android:text="@string/send_order" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>