<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.hotel_order.HotelOrderFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/order_hotel_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/primary_light"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/where_will_you_stay"
                    android:textSize="24sp" />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:startIconDrawable="@drawable/ic_location">

                    <AutoCompleteTextView
                        android:id="@+id/hotel_cites_autoComplete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:cursorVisible="false"
                        android:focusableInTouchMode="false"
                        android:inputType="none"
                        android:textColor="@color/primary"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/hotel_category"
                    android:textSize="24sp" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:stepSize="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/error_date"
                    android:textSize="24sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <ImageView
                        android:id="@+id/adult_image_view"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_adult"
                        app:layout_constraintStart_toStartOf="@+id/number_adult_button"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/adult_text_view"
                        style="@style/ExcursionOrderText"
                        android:layout_marginStart="16dp"
                        android:text="@string/adults"
                        app:layout_constraintStart_toEndOf="@+id/adult_image_view"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ru.navodnikov.denis.karagatantour.ui.utils.view.NumberButton
                        android:id="@+id/number_adult_button"
                        android:layout_width="128dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        app:backGroundColor="@color/primary"
                        app:finalNumber="20"
                        app:initialNumber="0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/adult_text_view"
                        app:textColor="@color/white"/>

                    <ImageView
                        android:id="@+id/children_image_view"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_child"
                        app:layout_constraintStart_toStartOf="@+id/number_children_button"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/children_text_view"
                        style="@style/ExcursionOrderText"
                        android:layout_marginStart="16dp"
                        android:text="@string/children"
                        app:layout_constraintStart_toEndOf="@+id/children_image_view"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ru.navodnikov.denis.karagatantour.ui.utils.view.NumberButton
                        android:id="@+id/number_children_button"
                        android:layout_width="128dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        app:backGroundColor="@color/primary"
                        app:finalNumber="20"
                        app:initialNumber="0"
                        app:layout_constraintStart_toStartOf="@+id/guideline3"
                        app:layout_constraintTop_toBottomOf="@+id/children_text_view"
                        app:textColor="@color/white"/>

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_calendar"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/date_since_book_edit_text"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="@+id/number_adult_button"
                        app:layout_constraintTop_toBottomOf="@+id/number_adult_button" />

                    <EditText
                        android:id="@+id/date_since_book_edit_text"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:focusableInTouchMode="false"
                        android:hint="@string/check_in"
                        android:inputType="date"
                        android:textColor="@color/primary_text"
                        android:textColorHint="@color/secondary_text"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toBottomOf="@+id/number_adult_button" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_calendar"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/date_before_book_edit_text"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/date_since_book_edit_text"
                        app:layout_constraintTop_toBottomOf="@+id/number_children_button" />

                    <EditText
                        android:id="@+id/date_before_book_edit_text"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:hint="@string/check_out"
                        android:inputType="date"
                        android:textColor="@color/primary_text"
                        android:textColorHint="@color/secondary_text"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toBottomOf="@+id/number_children_button" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.5" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/wishes"
                    android:textSize="24sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <AutoCompleteTextView
                        android:id="@+id/hotel_wishes_autoComplete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="16dp"
                        android:textColor="@color/primary"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/order_hotel_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:src="@drawable/ic_shopping_cart"
        android:tint="@color/white" />

</FrameLayout>